--- a/Waldem/Waldem.vcxproj
+++ b/Waldem/Waldem.vcxproj
@@ -169,10 +169,9 @@
     <ClInclude Include="src\Waldem\ECS\Components\MainCamera.h" />
     <ClInclude Include="src\Waldem\ECS\Components\ModelComponent.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\DebugSystem.h" />
-    <ClInclude Include="src\Waldem\ECS\Systems\DefferedRenderingSystem.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\ForwardRenderingSystem.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\FreeLookCameraSystem.h" />
-    <ClInclude Include="src\Waldem\ECS\Systems\GBufferRenderingSystem.h" />
+    <ClInclude Include="src\Waldem\ECS\Systems\DeferredRenderingSystem.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\PostProcessSystem.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\ShadowmapRenderingSystem.h" />
     <ClInclude Include="src\Waldem\ECS\Systems\System.h" />
@@ -199,6 +198,7 @@
     <ClInclude Include="src\Waldem\Renderer\Model\Material.h" />
     <ClInclude Include="src\Waldem\Renderer\Model\Mesh.h" />
     <ClInclude Include="src\Waldem\Renderer\Model\Model.h" />
+    <ClInclude Include="src\Waldem\Renderer\Model\Quad.h" />
     <ClInclude Include="src\Waldem\Renderer\Model\Transform.h" />
     <ClInclude Include="src\Waldem\Renderer\Pipeline.h" />
     <ClInclude Include="src\Waldem\Renderer\RenderTarget.h" />
