--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -174,7 +174,18 @@ xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Dist\Sandbox\Conte
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ShaderModel>5.1</ShaderModel>
     </FxCompile>
-    <FxCompile Include="src\Shaders\Test\DeferredRendering.vs.hlsl">
+    <FxCompile Include="src\Shaders\Test\PostProcess.comp.hlsl">
+      <ObjectFileOutput>..\bin\Debug\Sandbox\%(Filename).cso</ObjectFileOutput>
+      <TrackerLogDirectory>..\bin-int\Debug\Sandbox\Sandbox.tlog\</TrackerLogDirectory>
+      <EntryPointName>main</EntryPointName>
+      <SuppressStartupBanner>true</SuppressStartupBanner>
+      <ShaderModel>5.1</ShaderModel>
+      <MinimalRebuildFromTracking>true</MinimalRebuildFromTracking>
+      <DisableOptimizations>true</DisableOptimizations>
+      <EnableDebuggingInformation>true</EnableDebuggingInformation>
+      <ExcludedFromBuild>true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="src\Shaders\Test\QuadDraw.vs.hlsl">
       <ObjectFileOutput>..\bin\Debug\Sandbox\%(Filename).cso</ObjectFileOutput>
       <TrackerLogDirectory>..\bin-int\Debug\Sandbox\Sandbox.tlog\</TrackerLogDirectory>
       <EntryPointName>main</EntryPointName>
@@ -195,7 +206,7 @@ xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Dist\Sandbox\Conte
       <ShaderModel>5.1</ShaderModel>
       <EntryPointName>main</EntryPointName>
     </FxCompile>
-    <FxCompile Include="src\Shaders\Test\DeferredRendering.ps.hlsl">
+    <FxCompile Include="src\Shaders\Test\QuadDraw.ps.hlsl">
       <ObjectFileOutput>..\bin\Debug\Sandbox\%(Filename).cso</ObjectFileOutput>
       <TrackerLogDirectory>..\bin-int\Debug\Sandbox\Sandbox.tlog\</TrackerLogDirectory>
       <EntryPointName>main</EntryPointName>
@@ -228,6 +239,17 @@ xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Dist\Sandbox\Conte
       <EnableDebuggingInformation>true</EnableDebuggingInformation>
       <ShaderType>Vertex</ShaderType>
     </FxCompile>
+    <FxCompile Include="src\Shaders\Test\Lighting.hlsl">
+      <ObjectFileOutput>..\bin\Debug\Sandbox\Shadows.cso</ObjectFileOutput>
+      <TrackerLogDirectory>..\bin-int\Debug\Sandbox\Sandbox.tlog\</TrackerLogDirectory>
+      <EntryPointName>main</EntryPointName>
+      <SuppressStartupBanner>true</SuppressStartupBanner>
+      <ShaderModel>5.1</ShaderModel>
+      <MinimalRebuildFromTracking>true</MinimalRebuildFromTracking>
+      <DisableOptimizations>true</DisableOptimizations>
+      <EnableDebuggingInformation>true</EnableDebuggingInformation>
+      <ExcludedFromBuild>true</ExcludedFromBuild>
+    </FxCompile>
     <FxCompile Include="src\Shaders\Test\Line.ps.hlsl">
       <ShaderType>Pixel</ShaderType>
       <ShaderModel>5.1</ShaderModel>
@@ -238,7 +260,7 @@ xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Dist\Sandbox\Conte
       <ShaderModel>5.1</ShaderModel>
       <EntryPointName>main</EntryPointName>
     </FxCompile>
-    <FxCompile Include="src\Shaders\Test\PostProcess.comp.hlsl">
+    <FxCompile Include="src\Shaders\Test\DeferredRendering.comp.hlsl">
       <ExcludedFromBuild>true</ExcludedFromBuild>
       <ShaderModel>5.1</ShaderModel>
     </FxCompile>
@@ -251,6 +273,28 @@ xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Dist\Sandbox\Conte
       <ShaderType>Vertex</ShaderType>
       <ShaderModel>5.1</ShaderModel>
       <EntryPointName>main</EntryPointName>
+    </FxCompile>
+    <FxCompile Include="src\Shaders\Test\Shadows.hlsl">
+      <ObjectFileOutput>..\bin\Debug\Sandbox\%(Filename).cso</ObjectFileOutput>
+      <TrackerLogDirectory>..\bin-int\Debug\Sandbox\Sandbox.tlog\</TrackerLogDirectory>
+      <EntryPointName>main</EntryPointName>
+      <SuppressStartupBanner>true</SuppressStartupBanner>
+      <ShaderModel>5.1</ShaderModel>
+      <MinimalRebuildFromTracking>true</MinimalRebuildFromTracking>
+      <DisableOptimizations>true</DisableOptimizations>
+      <EnableDebuggingInformation>true</EnableDebuggingInformation>
+      <ExcludedFromBuild>true</ExcludedFromBuild>
+    </FxCompile>
+    <FxCompile Include="src\Shaders\Test\Types.hlsl">
+      <ObjectFileOutput>..\bin\Debug\Sandbox\%(Filename).cso</ObjectFileOutput>
+      <TrackerLogDirectory>..\bin-int\Debug\Sandbox\Sandbox.tlog\</TrackerLogDirectory>
+      <EntryPointName>main</EntryPointName>
+      <SuppressStartupBanner>true</SuppressStartupBanner>
+      <ShaderModel>5.1</ShaderModel>
+      <MinimalRebuildFromTracking>true</MinimalRebuildFromTracking>
+      <DisableOptimizations>true</DisableOptimizations>
+      <EnableDebuggingInformation>true</EnableDebuggingInformation>
+      <ExcludedFromBuild>true</ExcludedFromBuild>
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
